Fix sign in/out, header and footer was not showing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -59,7 +59,6 @@ body > footer {
 }
 
 .header-container {
-    z-index: 99;
     height: 100px;
 }
 
